@@ -1,3 +1,9 @@
+Tue Jun  1 22:41:03 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkmenu.c (get_accel_path): Handle accel_closure being
+	NULL on an accel label. (#139641, Sam Stephenson, patch by 
+	Michael Natterer)
+
 Tue Jun  1 22:19:55 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkicontheme.c (theme_subdir_load):  Prevent icon 
